--- a/research.html
+++ b/research.html
@@ -237,7 +237,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="TGFiJTIwUmVzZWFyY2g=" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1755844376056" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="909" data-listing-title-sort="Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="TGFiJTIwUmVzZWFyY2g=" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1755844726317" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="909" data-listing-title-sort="Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-17</span>
@@ -327,7 +327,7 @@ Reading Time
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/jinsaekiko\.github\.io");
+        var filterRegex = new RegExp("https:\/\/jinsko\.com");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
