deploy: 52924eb81f180ea1c7a8d99b01a4db72a946cf20

--- a/research.html
+++ b/research.html
@@ -114,6 +114,7 @@ window.Quarto = {
 </script>
 
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="mobile.css">
 </head>
 
 <body class="nav-fixed quarto-light">
@@ -237,7 +238,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="TGFiJTIwUmVzZWFyY2g=" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1756864713621" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="909" data-listing-title-sort="Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="TGFiJTIwUmVzZWFyY2g=" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1756865500864" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="909" data-listing-title-sort="Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-17</span>
