--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="mobile.css">
 </head>
 
 <body class="nav-fixed quarto-light">
