--- a/research/8-17-2025.html
+++ b/research/8-17-2025.html
@@ -75,6 +75,7 @@ div.csl-indent {
 
 
 <link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="../mobile.css">
 </head>
 
 <body class="nav-fixed quarto-light">
