--- a/books.html
+++ b/books.html
@@ -175,10 +175,14 @@ ISBN: <a href="https://www.worldcat.org/isbn/9780385351836">9780385351836</a></p
 ISBN: <a href="https://www.worldcat.org/isbn/9780451524935">9780451524935</a></p>
 <p>Bel Canto, <em>Ann Patchett</em><br>
 ISBN: <a href="https://www.worldcat.org/isbn/9780060838720">9780060838720</a></p>
+<p>The Catcher in the Rye <em>J. D. Salinger</em><br>
+ISBN: <a href="https://www.worldcat.org/isbn/9780316769488">9780316769488</a></p>
 <p>Kusamakura, <em>Natsume Sōseki</em><br>
 ISBN: <a href="https://www.worldcat.org/isbn/9780140449869">9780140449869</a></p>
 <p>A Little Life, <em>Hanya Yanagihara</em><br>
 ISBN: <a href="https://www.worldcat.org/isbn/9780385539258">9780385539258</a></p>
+<hr>
+<p><a href="./quotes.html">Quotes</a> from my favorites</p>
 
 
 </section>
