deploy: fc404c9093cbda987e8113ea7b0cc871b2fce684

--- a/quotes.html
+++ b/quotes.html
@@ -154,6 +154,10 @@ ul.task-list li input[type="checkbox"] {
 <p>He was in love, and never had he felt such kindness towards another person. Never had he received such kindness. Maybe the private life wasn’t forever. Maybe everyone got it for a little while and then spend the rest of their lives remembering.</p>
 </blockquote>
 <p>— Ann Patchett</p>
+<blockquote class="blockquote">
+<p>結局他人の痛みなんて分かってしまえば、まともに生きていけなかったんだ。</p>
+</blockquote>
+<p>—時雨沢 恵一</p>
 
 
 
