--- a/research/9-17-2025.html
+++ b/research/9-17-2025.html
@@ -6,9 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-21">
+<meta name="dcterms.date" content="2025-09-21">
 
-<title>How this Website was Made – Jin Saeki Ko</title>
+<title>∆waaF and Colanic Acid as a Surfactant – Jin Saeki Ko</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -21,7 +21,27 @@ ul.task-list li input[type="checkbox"] {
   margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
   vertical-align: middle;
 }
-</style>
+/* CSS for citations */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+  margin-bottom: 0em;
+}
+.hanging-indent div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}</style>
 
 
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script>
@@ -109,17 +129,31 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
+    <h2 id="toc-title">Table of Contents</h2>
+   
+  <ul>
+  <li><a href="#what-is-colanic-acid" id="toc-what-is-colanic-acid" class="nav-link active" data-scroll-target="#what-is-colanic-acid">What is Colanic Acid</a></li>
+  <li><a href="#e.-coli-and-ca-as-a-surfactant" id="toc-e.-coli-and-ca-as-a-surfactant" class="nav-link" data-scroll-target="#e.-coli-and-ca-as-a-surfactant"><em>E. coli</em> and CA as a Surfactant</a></li>
+  <li><a href="#ca-and-swarming" id="toc-ca-and-swarming" class="nav-link" data-scroll-target="#ca-and-swarming">CA and Swarming</a></li>
+  <li><a href="#methods-of-extracellular-supplementation-of-ca" id="toc-methods-of-extracellular-supplementation-of-ca" class="nav-link" data-scroll-target="#methods-of-extracellular-supplementation-of-ca">Methods of Extracellular Supplementation of CA</a>
+  <ul class="collapse">
+  <li><a href="#purification" id="toc-purification" class="nav-link" data-scroll-target="#purification">Purification</a></li>
+  <li><a href="#quantification" id="toc-quantification" class="nav-link" data-scroll-target="#quantification">Quantification</a></li>
+  <li><a href="#supplementation" id="toc-supplementation" class="nav-link" data-scroll-target="#supplementation">Supplementation</a></li>
+  </ul></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">How this Website was Made</h1>
+<h1 class="title">∆waaF and Colanic Acid as a Surfactant</h1>
   <div class="quarto-categories">
-    <div class="quarto-category">Quarto</div>
+    <div class="quarto-category">Lit Review</div>
   </div>
   </div>
 
@@ -131,7 +165,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">August 21, 2025</p>
+      <p class="date">September 21, 2025</p>
     </div>
   </div>
   
@@ -143,16 +177,64 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>I used Quarto, which was recommended to me by a friend for its simplicity and ease of management. I could have used any number of other tools to build the website for greater customization, but I don’t sweat the details; the uncouth aesthetics of a website don’t bring me much displeasure. I’m also lazy, which I suppose is the real reason.</p>
-<p>What I did to deploy my website is by no means special, so writing about this process is merely a way for me to fully understand it.</p>
-<p>To customize the website to my needs (though it is still a bleak website and may eventually require an update), I made a few adjustments to the <code>styles.css</code> file, including—but not limited to—setting the font, making the TOC and navbar sticky, and adding page transition animations. As for the theme specified in the configuration file, I simply built the website off the “lightly” theme.</p>
-<p>I hosted the website on GitHub Pages but bought a custom domain, so the DNS records needed to point to four <code>A</code> records that connect to GitHub’s servers. From there, a <code>CNAME</code> record points to my GitHub Page. Then, all I needed to do was tell GitHub that I had a custom domain ready.</p>
-<p>Rather than publishing from the <code>main</code> branch, I set up a separate branch, <code>gh-pages</code>, and published from there. This keeps the repo clean: I can isolate the build artifacts in that branch and deploy from there, relieving the main branch of unnecessary clutter. <code>_site</code> is also included in <code>.gitignore</code> to reduce clutter on the main branch, ensuring that only actual edits are visible in the version history.</p>
-<p>That concludes the mechanics behind the website. I’m sure I’ve mentioned this on the home page, but this website is primarily a way for me to put what I learn into words, which I hope will aid the learning process. I’ll continue doing this with other subjects of interest.</p>
+<p>Over the summer, I got my hands on <em>Escherchia coli ∆waaF</em>. The researchers at UT Austin were kind enough to consider a collaboration. This strain overproduces colanic acid, which I wanted to take advantage of. I want to test whether external supplemementation can rescue a certain non-swarming strain. The following information will frequently reference their publication, so I will list it here <span class="citation" data-cites="hwangCdiGMPRequiredSwarming2025">(<a href="#ref-hwangCdiGMPRequiredSwarming2025" role="doc-biblioref">Hwang et al. 2025</a>)</span>. In the subsequent passages, I will attempt to digest their paper in a way I can understand and apply in the lab.</p>
+<section id="what-is-colanic-acid" class="level1">
+<h1>What is Colanic Acid</h1>
+<p>Colanic acid (CA) is a polyanionic heteropolysaccharide composed of repeating six carbon sugars. Due to its overall negative charge throughout the molecule, strong hydration results, allowing water to spread over surfaces rather than form beads. These properties allow CA to act as a wetting agent/surfactant.</p>
+<p><img src="images/CA.png" class="img-fluid" data-fig-cap="Structure of Colanic Acid"></p>
+</section>
+<section id="e.-coli-and-ca-as-a-surfactant" class="level1">
+<h1><em>E. coli</em> and CA as a Surfactant</h1>
+<p>Since many swarming bacteria produce surfactants to aid this form of motility, it wouldn’t be surprising to find the same in <em>E. coli</em> <span class="citation" data-cites="kearnsFieldGuideBacterial2010">(<a href="#ref-kearnsFieldGuideBacterial2010" role="doc-biblioref">Kearns 2010</a>)</span>. Hitherto, no surfactants have been reported to be produced by <em>E. coli</em>.</p>
+<p>Since the publication in question refers to CA as a surfactant that is produced by <em>E. coli</em>, I’d like to review once again, though this wasn’t their core finding, how they arrived at this conclusion.</p>
+<p>The authors of the publication performed a drop collapse test, which resulted in CA showing surfactant properties. Contact angles on Eiken agar were also observed. Of the conditions they tested, CA had the lowest angle. So in conclusion, CA does seem to possess surfactant qualities.</p>
+</section>
+<section id="ca-and-swarming" class="level1">
+<h1>CA and Swarming</h1>
+<p>More importantly, the researchers contructed a mutant, ∆waaF, which resulted from the deletion of an multi-gene operon controlling LPS biosynthesis. This strain overproduced CA. This extract was added directly to a non-swarming strain that was lacking in CA via mutation. This rescued the non-swarming phenotype. Since I’d also like to supplement CA to a non-swarming strain, in the next section, I will walk myself through their methods, so that I can replicate it in the lab.</p>
+</section>
+<section id="methods-of-extracellular-supplementation-of-ca" class="level1">
+<h1>Methods of Extracellular Supplementation of CA</h1>
+<p>Hwang 2025 refers to Obadia 2007 in the methods section specifying the purification of CA <span class="citation" data-cites="obadiaInfluenceTyrosineKinaseWzc2007">(<a href="#ref-obadiaInfluenceTyrosineKinaseWzc2007" role="doc-biblioref">Obadia et al. 2007</a>)</span>. The usage of CA in this context can be divided into three steps: purification, quantification, and supplementation.</p>
+<section id="purification" class="level2">
+<h2 class="anchored" data-anchor-id="purification">Purification</h2>
+<p>According to Obadia 2007,</p>
+<blockquote class="blockquote">
+<p>Colanic acid was prepared and quantified from an overnight culture of each strain used.</p>
+</blockquote>
+<blockquote class="blockquote">
+<p>Bacteria were grown in LB medium at 37 °C.</p>
+</blockquote>
+<p>Subsequently, again, in Obadia 2007,</p>
+<blockquote class="blockquote">
+<p>The 50 ml cell culture was heated for 15 min at 100 °C to denature EPS-degrading enzymes.</p>
+</blockquote>
+<p>The rest of the procedure follows in the paper; just find the passage above since I copied it verbatim. I’m not pasting the entire thing here. I also want to talk to Dr.&nbsp;Yep about this since the procedure is subject to change.</p>
+</section>
+<section id="quantification" class="level2">
+<h2 class="anchored" data-anchor-id="quantification">Quantification</h2>
+<p>Hwang 2025 cites they measured fucose as a proxy for CA. They measured fucose using the Dische cysteine–sulfuric acid assay.</p>
+</section>
+<section id="supplementation" class="level2">
+<h2 class="anchored" data-anchor-id="supplementation">Supplementation</h2>
+<p>Hwang 2025 uses beads (3mm) to distribute CA extracts across the plate. Eiken agar was made as usual, but the researchers dried the plates under the laminar flow hood for 1 hour rather than 1 day, which is what we occasionally do.</p>
 
 
 
-</main> <!-- /main -->
+</section>
+</section>
+
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-hwangCdiGMPRequiredSwarming2025" class="csl-entry" role="listitem">
+Hwang, YuneSahng, Marta Perez, Rebecca Holzel, and Rasika M. Harshey. 2025. <span>“C-Di-<span>GMP</span> Is <span>Required</span> for <span>Swarming</span> in <span>E</span>. Coli: A <span>Role</span> for <span>DgcO</span> and <span>Colanic Acid</span>.”</span> <a href="https://doi.org/10.1101/2025.01.04.631324">https://doi.org/10.1101/2025.01.04.631324</a>.
+</div>
+<div id="ref-kearnsFieldGuideBacterial2010" class="csl-entry" role="listitem">
+Kearns, Daniel B. 2010. <span>“A Field Guide to Bacterial Swarming Motility.”</span> <em>Nature Reviews. Microbiology</em> 8 (9): 634–44. <a href="https://doi.org/10.1038/nrmicro2405">https://doi.org/10.1038/nrmicro2405</a>.
+</div>
+<div id="ref-obadiaInfluenceTyrosineKinaseWzc2007" class="csl-entry" role="listitem">
+Obadia, Brice, Soline Lacour, Patricia Doublet, Hélène Baubichon-Cortay, Alain J. Cozzone, and Christophe Grangeasse. 2007. <span>“Influence of <span>Tyrosine-Kinase Wzc Activity</span> on <span>Colanic Acid Production</span> in <span>Escherichia</span> Coli <span>K12 Cells</span>.”</span> <em>Journal of Molecular Biology</em> 367 (1): 42–53. <a href="https://doi.org/10.1016/j.jmb.2006.12.048">https://doi.org/10.1016/j.jmb.2006.12.048</a>.
+</div>
+</div></section></div></main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
   window.document.addEventListener("DOMContentLoaded", function (event) {
     const icon = "";
