--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-dc55a5b9e770e841cd82e46aadbfb9b0.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-19c6f25d9c793ca7e0d0ad6a6391bd12.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-8fd1faf6fd93e4e6d207ae0f9db51d78.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "language": {
     "search-no-results-text": "No results",
@@ -170,7 +170,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="R2VuZXRpY3M=">Genetics <span class="quarto-category-count">(1)</span></div><div class="category" data-category="TWlzYw==">Misc <span class="quarto-category-count">(1)</span></div><div class="category" data-category="UXVhcnRv">Quarto <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="R2VuZXRpY3M=">Genetics <span class="quarto-category-count">(1)</span></div><div class="category" data-category="TWVkaWNpbmU=">Medicine <span class="quarto-category-count">(1)</span></div><div class="category" data-category="TWlzYw==">Misc <span class="quarto-category-count">(1)</span></div><div class="category" data-category="UXVhcnRv">Quarto <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -241,7 +241,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="UXVhcnRv" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1758589221333" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="UXVhcnRv" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1758779577918" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-21</span>
@@ -255,7 +255,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="R2VuZXRpY3M=" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1758589221333" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="R2VuZXRpY3M=" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1758779577917" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -269,7 +269,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1758589221333" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1758779577917" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -279,6 +279,20 @@ Reading Time
 </td>
 <td>
 <span class="listing-reading-time">2 min</span>
+</td>
+
+</tr>
+
+<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1758779577918" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+ if (href) { window.location=href ; return false; }">
+<td>
+<span class="listing-date">2025-09-24</span>
+</td>
+<td>
+<a href="./blog/diabetic-ketoacidosis.html" class="title listing-title">Diabetic Ketoacidosis and Non-Ketotic Coma</a>
+</td>
+<td>
+<span class="listing-reading-time">3 min</span>
 </td>
 
 </tr>
