deploy: 99c17a016cf71516093f9ef531324c02e61cee5b

--- a/research/stationary-phase.html
+++ b/research/stationary-phase.html
@@ -171,7 +171,7 @@ div.csl-indent {
 </header>
 
 
-<p>Dr.&nbsp;Yep noticed out how <em>∆fur</em> stalled earlier than the other strains. It’s not necessarily a problem, but I’d like to understand the cause. The paper should also explain this, so we’ll need the rationale anyway.</p>
+<p>Dr.&nbsp;Yep noticed how <em>∆fur</em> stalled earlier than the other strains. It’s not necessarily a problem, but I’d like to understand the cause. The paper should also explain this, so we’ll need the rationale anyway.</p>
 <p><em>∆fur</em> entered stationary phase early in Lysogeny Broth (LB). This didn’t happen with any of the other strains or media. <em>Why</em>? I’ll attempt to explain this in a few ways.</p>
 <section id="ros-damage" class="level1">
 <h1>ROS Damage</h1>
