deploy: 106b52c4b23553901b7b250b1a321ad3ff624f61

--- a/research/8-17-2025.html
+++ b/research/8-17-2025.html
@@ -118,6 +118,11 @@ div.csl-indent {
 </i> 
 <span class="menu-text">Substack</span></a>
   </li>  
+  <li class="nav-item compact">
+    <a class="nav-link" href="../index.xml"> <i class="bi bi-rss" role="img">
+</i> 
+<span class="menu-text"></span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -210,7 +215,7 @@ div.csl-indent {
 <p>The importance of iron is understood but the specific reason for its importance reveals itself in the role iron plays as a cofactor. There are specific enzymes within the citric acid cycle that require iron as a cofactor for proper catalysis and therefore, energy production. We expect depletion of iron to negatively impact growth.</p>
 <p>We know how iron impacts growth, but we have not yet understood its impacts on motility.</p>
 <p>The deletion of the Fur (ferric uptake repressor) expressed an excess of iron intracellularly <span class="citation" data-cites="mchughGlobalIrondependentGene2003">(<a href="#ref-mchughGlobalIrondependentGene2003" role="doc-biblioref">McHugh et al. 2003</a>)</span>. Fur was proven to be a master regulator of iron dependent uptake systems and the synthesis of conjugated proteins with iron as its prosthetic group. Under iron repleted conditions, fur binds to iron, attaching itself to the furbox upstream of iron-related genes, restricting the amount of iron imported into the cell and allowing production of conjugated proteins. Conversely, under iron depleted conditions, fur falls off the furbox, allowing the uptake of iron and decreasing the production of conjugated proteins.</p>
-<p>Motility happens to be one of the genes that is affected by the Fur repression. There is evidence that the Fe 2-Fur complex also represses genes (cyoA, flbB, fumC, gpmA, metH, nohB, purR, and sodA) involved in various noniron functions (respiration, <strong>flagella chemotaxis</strong>, the TCA cycle) <span class="citation" data-cites="mchughGlobalIrondependentGene2003">(<a href="#ref-mchughGlobalIrondependentGene2003" role="doc-biblioref">McHugh et al. 2003</a>)</span>.</p>
+<p>Motility happens to be one of the genes that is affected by the Fur repression. There is evidence that the Fe2+-Fur complex also represses genes (cyoA, flbB, fumC, gpmA, metH, nohB, purR, and sodA) involved in various noniron functions (respiration, <strong>flagella chemotaxis</strong>, the TCA cycle) <span class="citation" data-cites="mchughGlobalIrondependentGene2003">(<a href="#ref-mchughGlobalIrondependentGene2003" role="doc-biblioref">McHugh et al. 2003</a>)</span>.</p>
 <section id="why-not-explore-other-nutrients" class="level3">
 <h3 class="anchored" data-anchor-id="why-not-explore-other-nutrients">Why not explore other nutrients?</h3>
 <p>Iron concentration is, under normal conditions, very restricted in the urinary tract. It is therefore one of the limiting nutrients in the environment of infection.</p>
