deploy: 197f6a46cdfb3df219100da763ad2463414f8077

--- a/quotes.html
+++ b/quotes.html
@@ -52,6 +52,15 @@ ul.task-list li input[type="checkbox"] {
     "search-label": "Search"
   }
 }</script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-C15D2JVJTJ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
+</script>
 
 
 <link rel="stylesheet" href="styles.css">
@@ -114,6 +123,7 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#f.-scott-fitzgerald" id="toc-f.-scott-fitzgerald" class="nav-link active" data-scroll-target="#f.-scott-fitzgerald">F. Scott Fitzgerald</a></li>
+  <li><a href="#sarah-kane" id="toc-sarah-kane" class="nav-link" data-scroll-target="#sarah-kane">Sarah Kane</a></li>
   <li><a href="#haruki-murakami" id="toc-haruki-murakami" class="nav-link" data-scroll-target="#haruki-murakami">Haruki Murakami</a></li>
   <li><a href="#george-orwell" id="toc-george-orwell" class="nav-link" data-scroll-target="#george-orwell">George Orwell</a></li>
   <li><a href="#ann-patchett" id="toc-ann-patchett" class="nav-link" data-scroll-target="#ann-patchett">Ann Patchett</a></li>
@@ -152,6 +162,12 @@ ul.task-list li input[type="checkbox"] {
 </blockquote>
 <blockquote class="blockquote">
 <p>Let us learn to show our friendship for a man when he is alive and not after he is dead.</p>
+</blockquote>
+</section>
+<section id="sarah-kane" class="level3">
+<h3 class="anchored" data-anchor-id="sarah-kane">Sarah Kane</h3>
+<blockquote class="blockquote">
+<p>There’s not a drug on earth can make life meaningful.</p>
 </blockquote>
 </section>
 <section id="haruki-murakami" class="level3">
