--- a/research.html
+++ b/research.html
@@ -83,6 +83,15 @@ ul.task-list li input[type="checkbox"] {
     }
   })
   </script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-C15D2JVJTJ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
+</script>
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -241,7 +250,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1759493679540" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1760233242566" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-17</span>
@@ -255,7 +264,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1759493679540" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1760233242566" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-21</span>
@@ -269,7 +278,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1759493679541" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1760233242567" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-10-03</span>
