--- a/blog.html
+++ b/blog.html
@@ -83,6 +83,15 @@ ul.task-list li input[type="checkbox"] {
     }
   })
   </script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-C15D2JVJTJ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
+</script>
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -241,7 +250,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="UXVhcnRv" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1759493679539" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-categories="UXVhcnRv" data-listing-date-sort="1755734400000" data-listing-file-modified-sort="1760233242565" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="317" data-listing-title-sort="How this Website was Made" data-listing-filename-sort="blog_post.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-21</span>
@@ -255,7 +264,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="R2VuZXRpY3M=" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1759493679539" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-categories="R2VuZXRpY3M=" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1760233242565" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="920" data-listing-title-sort="Overview Of Sequencing" data-listing-filename-sort="08-29-25.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -269,7 +278,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1759493679539" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-categories="TWlzYw==" data-listing-date-sort="1756425600000" data-listing-file-modified-sort="1760233242565" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="301" data-listing-title-sort="Mol/Micro Biology is Merely an Abstraction" data-listing-filename-sort="08-29-25(2).qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-29</span>
@@ -283,7 +292,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1759493679539" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-categories="TWVkaWNpbmU=" data-listing-date-sort="1758672000000" data-listing-file-modified-sort="1760233242565" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="585" data-listing-title-sort="Diabetic Ketoacidosis and Non-Ketotic Coma" data-listing-filename-sort="diabetic-ketoacidosis.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-24</span>
