deploy: 9685565d66bf27ac7f33e865d3263db4a71f6d71

--- a/books.html
+++ b/books.html
@@ -152,47 +152,27 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <p>Some favorites.</p>
 <section id="nonfiction" class="level1">
 <h1>Nonfiction</h1>
-<p>The Basic Laws of Human Stupidity, <em>Carlo M. Cipolla</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780385546478">9780385546478</a></p>
-<p>The Selfish Gene, <em>Richard Dawkins</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780199291151">9780199291151</a></p>
-<p>The Spirit Catches You and You Fall Down, <em>Anne Fadiman</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780374533403">9780374533403</a></p>
-<p>What My Bones Know: A Memoir of Healing from Complex Trauma, <em>Stephanie Foo</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780593238127">9780593238127</a></p>
-<p>Being Mortal, <em>Atul Gawande</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780805095159">9780805095159</a></p>
-<p>How Doctors Think, <em>Jerome Groopman</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780618610037">9780618610037</a></p>
-<p>The Machinery of Life, <em>David S. Goodsell</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780387849256">9780387849256</a></p>
-<p>When Breath Becomes Air, <em>Paul Kalanithi</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780812988406">9780812988406</a></p>
-<p>The Ghost Map, <em>Steven Johnson</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9781594482694">9781594482694</a></p>
-<p>I Contain Multitudes: The Microbes Within Us and a Grander View of Life, <em>Ed Yong</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780062368591">9780062368591</a></p>
+<p>The Basic Laws of Human Stupidity, <em>Carlo M. Cipolla</em></p>
+<p>The Selfish Gene, <em>Richard Dawkins</em></p>
+<p>The Spirit Catches You and You Fall Down, <em>Anne Fadiman</em></p>
+<p>What My Bones Know: A Memoir of Healing from Complex Trauma, <em>Stephanie Foo</em></p>
+<p>Being Mortal, <em>Atul Gawande</em></p>
+<p>How Doctors Think, <em>Jerome Groopman</em></p>
+<p>The Machinery of Life, <em>David S. Goodsell</em></p>
+<p>When Breath Becomes Air, <em>Paul Kalanithi</em></p>
+<p>I Contain Multitudes: The Microbes Within Us and a Grander View of Life, <em>Ed Yong</em></p>
 </section>
 <section id="fiction" class="level1">
 <h1>Fiction</h1>
-<p>A Man Called Ove, <em>Fredrik Backman</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9781476738024">9781476738024</a></p>
-<p>1Q84, <em>Haruki Murakami</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780307593313">9780307593313</a></p>
-<p>Colorless Tsukuru Tazaki and His Years of Pilgrimage, <em>Haruki Murakami</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780804170123">9780804170123</a></p>
-<p>One More Thing: Stories and Other Stories, <em>B.J. Novak</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780385351836">9780385351836</a></p>
-<p>1984, <em>George Orwell</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780451524935">9780451524935</a></p>
-<p>Bel Canto, <em>Ann Patchett</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780060838720">9780060838720</a></p>
-<p>The Catcher in the Rye <em>J. D. Salinger</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780316769488">9780316769488</a></p>
-<p>Kusamakura, <em>Natsume Sōseki</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780140449869">9780140449869</a></p>
-<p>A Little Life, <em>Hanya Yanagihara</em><br>
-ISBN: <a href="https://www.worldcat.org/isbn/9780385539258">9780385539258</a></p>
+<p>A Man Called Ove, <em>Fredrik Backman</em></p>
+<p>1Q84, <em>Haruki Murakami</em></p>
+<p>Colorless Tsukuru Tazaki and His Years of Pilgrimage, <em>Haruki Murakami</em></p>
+<p>1984, <em>George Orwell</em></p>
+<p>Bel Canto, <em>Ann Patchett</em></p>
+<p>The Catcher in the Rye <em>J. D. Salinger</em></p>
+<p>Kusamakura, <em>Natsume Sōseki</em></p>
+<p>The Death of Ivan Ilyich, <em>Leo Tolstoy</em></p>
+<p>A Little Life, <em>Hanya Yanagihara</em></p>
 <hr>
 <p><a href="./quotes.html">Quotes</a> from various sources, including digital media.</p>
 
