deploy: 2c153b543b62962cc9b5965d5238ac5ffeb7b94b

--- a/books.html
+++ b/books.html
@@ -165,11 +165,12 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <section id="fiction" class="level1">
 <h1>Fiction</h1>
 <p>A Man Called Ove, <em>Fredrik Backman</em></p>
+<p>The Ones Who Walk Away from Omelas, <em>Ursula K. Le Guin</em></p>
 <p>1Q84, <em>Haruki Murakami</em></p>
 <p>Colorless Tsukuru Tazaki and His Years of Pilgrimage, <em>Haruki Murakami</em></p>
 <p>1984, <em>George Orwell</em></p>
 <p>Bel Canto, <em>Ann Patchett</em></p>
-<p>The Catcher in the Rye <em>J. D. Salinger</em></p>
+<p>The Catcher in the Rye, <em>J. D. Salinger</em></p>
 <p>Kusamakura, <em>Natsume Sōseki</em></p>
 <p>The Death of Ivan Ilyich, <em>Leo Tolstoy</em></p>
 <p>A Little Life, <em>Hanya Yanagihara</em></p>
