--- a/quotes.html
+++ b/quotes.html
@@ -181,6 +181,9 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 <blockquote class="blockquote">
 <p>If I had remained at home, I would have spent my life waiting for you to get in touch. And a life spent waiting would mean I couldn’t think of anything other than you. Of course, I wouldn’t mind. Since you were what I wanted in this world, more than anything.</p>
 </blockquote>
+<blockquote class="blockquote">
+<p>We each have a special something we can get only at a special time of our life. Like a small flame. A careful, fortunate few cherish that flame, nurture it, hold it as a torch to light their way. But once that flame goes out, it’s gone forever.</p>
+</blockquote>
 </section>
 <section id="george-orwell" class="level3">
 <h3 class="anchored" data-anchor-id="george-orwell">George Orwell</h3>
