deploy: a9af1af7b5ee49cf1ea16729c8319c272fc60677

--- a/quotes.html
+++ b/quotes.html
@@ -122,7 +122,8 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
     <h2 id="toc-title">Table of Contents</h2>
    
   <ul>
-  <li><a href="#f.-scott-fitzgerald" id="toc-f.-scott-fitzgerald" class="nav-link active" data-scroll-target="#f.-scott-fitzgerald">F. Scott Fitzgerald</a></li>
+  <li><a href="#fredrik-backman" id="toc-fredrik-backman" class="nav-link active" data-scroll-target="#fredrik-backman">Fredrik Backman</a></li>
+  <li><a href="#f.-scott-fitzgerald" id="toc-f.-scott-fitzgerald" class="nav-link" data-scroll-target="#f.-scott-fitzgerald">F. Scott Fitzgerald</a></li>
   <li><a href="#sarah-kane" id="toc-sarah-kane" class="nav-link" data-scroll-target="#sarah-kane">Sarah Kane</a></li>
   <li><a href="#haruki-murakami" id="toc-haruki-murakami" class="nav-link" data-scroll-target="#haruki-murakami">Haruki Murakami</a></li>
   <li><a href="#george-orwell" id="toc-george-orwell" class="nav-link" data-scroll-target="#george-orwell">George Orwell</a></li>
@@ -155,6 +156,15 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 </header>
 
 
+<section id="fredrik-backman" class="level3">
+<h3 class="anchored" data-anchor-id="fredrik-backman">Fredrik Backman</h3>
+<blockquote class="blockquote">
+<p>Ove had never been asked how he lived before he met her. But if anyone had asked him, he would have answered that he didn’t.</p>
+</blockquote>
+<blockquote class="blockquote">
+<p>She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.</p>
+</blockquote>
+</section>
 <section id="f.-scott-fitzgerald" class="level3">
 <h3 class="anchored" data-anchor-id="f.-scott-fitzgerald">F. Scott Fitzgerald</h3>
 <blockquote class="blockquote">
